@@ -1,4 +1,8 @@
 2003-12-08 Al Riddoch <alriddoch@zepler.org>
+	* src/services/test/TestService.cpp: Use <iostream> instead of
+	  <iostream.h> and fix std:: namespace usage.
+
+2003-12-08 Al Riddoch <alriddoch@zepler.org>
 	* src/services/ServiceTest.cpp: Use <iostream> instead of <iostream.h>
 	  and fix std:: namespace usage.
 
